--- a/index.html
+++ b/index.html
@@ -4,16 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Test your JavaScript knowledge!</title>
 </head>
-<body>
 
+<body>
   <header>
-      <h1>Sample Webpage</h1>
+    <h1>Test your knowledge!</h1>
+    <h2>Can you beat the clock?</h2>
   </header>
 
+<!--start button here, also display starting time on a panel for timer-->
+    
+
+
+
+
+
+    
   <section>
-      <h2>My List</h2>
+      <h3>My List</h3>
       <ul>
         <li>Item 1</li>
         <li>Item 2</li>
