--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test your JavaScript knowledge!</title>
-    <stylesheet= "styles.css">
+   <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
@@ -23,6 +23,6 @@
     <p id="timer">Time remaining: <span id="time">75</span> seconds</p>
     <button onclick="nextQuestion()">Next</button>
   </div>
-  <script src="javascript.js">
+  <script src="javascript.js"></script>
 </body>
 </html>
